# Qt-project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.d6abd71  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  records.txt
LabWorkManager/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
LabWorkManager/.cmake/api/v1/reply/: cache-v2-0cc44e13740e920f0fcc.json  cmakeFiles-v1-6066192d5ed1befa5550.json  codemodel-v2-193716f08c82bccea77d.json  directory-.-MinSizeRel-dfb8d95431290ed9be5f.json  index-2025-05-02T18-34-21-0558.json  target-test1-MinSizeRel-f8f231fccef4d7be1d4a.json  target-test1_autogen-MinSizeRel-c675fef20edf99b27313.json
LabWorkManager/test1_autogen/: moc_predefs.h
LabWorkManager/test1_autogen/EWIEGA46WW/: moc_mainwindow.cpp
LabWorkManager/test1_autogen/include/: ui_mainwindow.h
